--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -31,6 +31,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: {{ matrix.service }}
+          context: ${{ matrix.service }}
           push: true
           tags: nuroz123/${{ matrix.service }}:latest
