Jobs push on docker hub

--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -15,8 +15,9 @@ jobs:
           - order-service
           - user-service
     steps:
-    - name: List directory structure
-      run: ls -R
+      - 
+        name: List directory structure
+        run: ls -R
 
       -
         name: Set up QEMU
