Jobs push on docker hub

--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -20,6 +20,9 @@ jobs:
 
     steps:
       -
+        name: List directories
+        run: ls -l
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
