Jobs push on docker hub

--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -21,7 +21,9 @@ jobs:
     steps:
       -
         name: List directories
-        run: ls -l
+        run: |
+          echo "Listing contents of the repository root:"
+          ls -l
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
