Jobs push on docker hub

--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -19,6 +19,9 @@ jobs:
             image_name: nuroz123/user-service
 
     steps:
+       - 
+        name: Checkout code
+        uses: actions/checkout@v2
       -
         name: List directories
         run: |
