--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -34,6 +34,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Extract branch name
+        id: extract_branch
+        run: echo "::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})"
+        shell: bash
       -
         name: Build and push ${{ matrix.context }}
         uses: docker/build-push-action@v5
