--- a/k8s-specifications/db-deployment.yaml
+++ b/k8s-specifications/db-deployment.yaml
@@ -5,11 +5,12 @@ metadata:
     app: db
   name: db
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: "db-service"
     port: 27017
     targetPort: 27017
+    nodePort: 27017
   selector:
     app: db
   
