--- a/k8s-specifications/db-deployment.yaml
+++ b/k8s-specifications/db-deployment.yaml
@@ -7,10 +7,9 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - name: "db-service"
+  - name: "ClusterIP"
     port: 27017
     targetPort: 27017
-    nodePort: 30000
   selector:
     app: db
   
