--- a/k8s-specifications/db-deployment.yaml
+++ b/k8s-specifications/db-deployment.yaml
@@ -1,15 +1,28 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   labels:
     app: db
   name: db
 spec:
-  type: ClusterIP
-  ports:
-  - name: "db-service"
-    port: 27017
-    targetPort: 27017
+  replicas: 1
   selector:
-    app: db
-  
+    matchLabels:
+      app: db
+  template:
+    metadata:
+      labels:
+        app: db
+    spec:
+      containers:
+      - image: mongo:latest
+        name: mongo
+        ports:
+        - containerPort: 27017
+          name: mongo
+        volumeMounts:
+        - mountPath: /data/db
+          name: db-data
+      volumes:
+      - name: db-data
+        emptyDir: {}
