--- a/k8s-specifications/db-service.yaml
+++ b/k8s-specifications/db-service.yaml
@@ -1,28 +1,15 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
   labels:
     app: db
   name: db
 spec:
-  replicas: 1
+  type: ClusterIP
+  ports:
+  - name: "db-service"
+    port: 27017
+    targetPort: 27017
   selector:
-    matchLabels:
-      app: db
-  template:
-    metadata:
-      labels:
-        app: db
-    spec:
-      containers:
-      - image: mongo:latest
-        name: mongo
-        ports:
-        - containerPort: 27017
-          name: mongo
-        volumeMounts:
-        - mountPath: /data/db
-          name: db-data
-      volumes:
-      - name: db-data
-        emptyDir: {}
+    app: db
+  
