--- a/k8s-specifications/user-service-service.yaml
+++ b/k8s-specifications/user-service-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: vote
-  name: vote
+    app: user-service
+  name: user-service
 spec:
   type: NodePort
   ports:
@@ -12,5 +12,5 @@ spec:
     targetPort: 3001
     nodePort: 31000
   selector:
-    app: vote
+    app: user-service
   
