--- a/front-end-react/Dockerfile
+++ b/front-end-react/Dockerfile
@@ -10,9 +10,9 @@ COPY . .
 
 RUN npm run build
 
-FROM nginx:stable-alpine as production-stage
+FROM nginx:stable-alpine
 
-COPY --from=build-stage /app/build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 
 EXPOSE 80
 
