--- a/front-end-react/Dockerfile
+++ b/front-end-react/Dockerfile
@@ -8,11 +8,11 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
+RUN npm run build 
 
 FROM nginx:stable-alpine
 
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build-stage /app/build /usr/share/nginx/html
 
 EXPOSE 80
 
