front en nodeport

--- a/k8s-specifications/front-end-react-service.yaml
+++ b/k8s-specifications/front-end-react-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: react-app-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: react-app
   ports:
